--- a/index.html
+++ b/index.html
@@ -7,25 +7,14 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-
-    <div class="container">
-        <img src="./Новая папка/1200x900.webp" alt="">
-        <img src="./Новая папка/5f17e9b4ec05c41b4d000058.jpg" alt="">
-        <img src="./Новая папка/scale_1200.webp" alt="">
-        </div>
-
-        <div class="container">
-            <img src="./Новая папка/i (1).webp" alt="">
-            <img src="./Новая папка/i.webp" alt="">
-            <img src="./Новая папка/maxresdefault (1).jpg" alt="">
-        </div>
-
-        <div class="container">
-            <img src="./Новая папка/maxresdefault.jpg" alt="">
-            <img src="./Новая папка/rm023-326fn-1671570263.avif" alt="">
-            <img src="./Новая папка/Rqj5CaV24BbvWfTnxzFr9y2TVI8-1920.jpg" alt="">
-        </div>
-
+    <div>
+        <h1>Dodge RAM</h1>
+<img src="./i.webp" alt="">
+<p>Ram Rampage — среднеразмерный пикап, выпускаемый подразделением Stellantis North America с июня 2023 года[1][2]. <br>Это первый автомобиль Ram Trucks, выпускаемый в Бразилии[3][4]. Он базируется на платформе Small Wide[5][6].
+    С точки зрения Ram Trucks, слово Rampage означает в переводе с английского возбуждение, шум, неистовство, ярость[7][8]. <br> В 1980-х годах такое название присваивалось автомобилю Dodge Rampage[9][10].
+    Официально производство автомобиля Ram Rampage началось 6 июня 2023 года в Гояне[11][12]. На церемонии присутствовал президент Лула да Силва, Луис Инасиу[13][14]. Продажи планируются с 2024 года[15][16]. <br>Двигатели позаимствованы у Jeep Wrangler[17][18]. Внешне автомобиль напоминает RAM Pickup[19]. <br>Автомобиль оснащён многофункциональной кабиной[20].
+    Примечания. посмотреть галерею <a href="../галерея html/index.html">сюда</a>
+</p>
     </div>
 
 </body>
