--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p>Ram Rampage — среднеразмерный пикап, выпускаемый подразделением Stellantis North America с июня 2023 года[1][2]. <br>Это первый автомобиль Ram Trucks, выпускаемый в Бразилии[3][4]. Он базируется на платформе Small Wide[5][6].
     С точки зрения Ram Trucks, слово Rampage означает в переводе с английского возбуждение, шум, неистовство, ярость[7][8]. <br> В 1980-х годах такое название присваивалось автомобилю Dodge Rampage[9][10].
     Официально производство автомобиля Ram Rampage началось 6 июня 2023 года в Гояне[11][12]. На церемонии присутствовал президент Лула да Силва, Луис Инасиу[13][14]. Продажи планируются с 2024 года[15][16]. <br>Двигатели позаимствованы у Jeep Wrangler[17][18]. Внешне автомобиль напоминает RAM Pickup[19]. <br>Автомобиль оснащён многофункциональной кабиной[20].
-    Примечания. посмотреть галерею <a href="../галерея html/index.html">сюда</a>
+    Примечания. посмотреть галерею <a href="./галерея html/index.html">сюда</a>
 </p>
     </div>
 
